# DLM

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  ToDo.txt  new_file_OOP
Example/: README.md  README_Example  input_anneal.txt  input_compete.txt  input_isothermal.txt  input_melt.txt
Example/Input/JSONs/: FritsApp.json  RcH4x4.json  RcS.json  RcSH2.json  RcT.json  RcU.json  RcUH2.json  RcUa.json  RcUa4x4.json  RcUa6x6.json  RcUaH.json  RcUaH2.json  SqU2.json  SqUa2.json
Example/Input/OPs/: RcSH2_OP.txt  RcSN2_OP.txt  RcS_OP.txt  RcUN_OP.txt  RcU_OP.txt  RcUa4x4_RcH4x4_OP.txt  RcUaN2_OP.txt  RcUaN_OP.txt  SqU1_OP.txt
Example/Input/Topology/: RcH6x6.top  RcSH2.top  RcSN.top  RcT.top  RcT_RcH.top  RcU.top  RcUH.top  (+13 more)
Headers/: EdgeProperty.h  Graph.h  Headers.h  VertexProperty.h
Output/: Anneal.txt  Anneal_1.5_0_20_1_15.txt  Anneal_2.5_2_20_1_999.txt  Melt.txt  Melt_1.5_0_20_1_15.txt  Melt_2.5_2_20_1_1000.txt  main.py
Run/: Init.conf  Last.conf  Missing.txt  energies.txt  exact.py  input.txt  w_file.txt
Test/: compile.sh  main  main.cpp  main2.cpp
exe/: main.cpp
src/: Common.cpp  Common.h  Constants.cpp  Constants.h  Crossover.cpp  Crossover.h  Design.cpp  Design.h  Domain.cpp  Domain.h  FileIO.cpp  FileIO.h  Headers.h  Helix.cpp  Helix.h  Input.cpp  Input.h  Loop.cpp  Loop.h  MyGraph.cpp  MyGraph.h  Node.cpp  Node.h  OPManager.cpp  OPManager.h  OrderParameter.cpp  OrderParameter.h  Output.h  SSA.h  Scaffold.cpp  Scaffold.h  Simulation.cpp  Simulation.h  Staple.cpp  Staple.h  StaplePool.cpp  StaplePool.h  StatManager.cpp  StatManager.h  Strand.cpp  (+24 more)
(+70 files in other folders)
